2007-06-03 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-ui-utils.c
	* libempathy-gtk/gossip-accounts-dialog.c
	* libempathy-gtk/Makefile.am
	* src/empathy-accounts-main.c
	* src/empathy-chat-main.c
	* src/Makefile.am
	* src/empathy-main.c
	* libempathy/gossip-utils.c
	* libempathy/Makefile.am
	* src/empathy-filter.h
	* src/empathy-filter-plugin.c
	* src/empathy-filter.xml
	* src/empathy-filter.c
	* libempathy/gossip-paths.c
	* libempathy/gossip-paths.h: Remove unused code and append DATADIR to
	dirs where GTK should search icons.

2007-06-03 Xavier Claessens  <xclaesse@gmail.com>

	* po/POTFILES.in:
	* po/POTFILES.skip: Add missing files that have strings for translation.
	Skip empathy-desktop.in.in. (Olivier Crete)

2007-06-03 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-group-chat.c:
	* libempathy-gtk/gossip-private-chat.c:
	* libempathy-gtk/gossip-chat.c:
	* libempathy-gtk/gossip-chat.h:
	* libempathy/empathy-tp-chat.c: Add all properties described by TP spec
	for the Text channel on EmpathyTpChat. Make use of "name" and "subject"
	properties in GossipGroupChat.

2007-06-02  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-log-manager.c: Fix crash when there is no log
	available for a chat.
	* libempathy/empathy-tp-contact-list.c: Fix a crash when destroy signal
	is emitted before StatusChanged.

2007-06-02  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-group-chat.c:
	* libempathy-gtk/gossip-private-chat.c:
	* libempathy-gtk/gossip-chat.c:
	* libempathy/empathy-log-manager.c:
	* libempathy/empathy-log-manager.h:
	* libempathy/empathy-log-manager.xsl:
	* libempathy/Makefile.am: Log chats and display 10 last messages when
	opening a new chat.

2007-06-02  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-group-chat.c:
	* libempathy/empathy-tp-contact-list.c:
	* libempathy/gossip-contact.c: Set default presence to available if
	there is no presence iface.
