@@ -107,7 +107,7 @@
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
 		      <property name="label">gtk-connect</property>
-		      <property name="use_stock">True</property>
+		      <property name="use_stock">False</property>
 		      <property name="relief">GTK_RELIEF_NORMAL</property>
 		      <property name="focus_on_click">True</property>
 		    </widget>
